Implement Spring Security, refactor css theme colors, implement delete for invitation